Fix alignment

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -14,6 +14,7 @@ body {
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
   padding: 8px;
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -51,5 +52,15 @@ ul {
 
 .links {
   display:flex;
+  gap: 16px;
+}
+
+.left {
+  display: flex;
+  gap: 16px;
+}
+
+.right {
+  display: flex;
   gap: 16px;
 }
